# Piranha

./: .travis.yml  AUTHORS  Dockerfile.x86_64  DynamicVoronoiBase.cc  DynamicVoronoiBase.hh  DynamicVoronoiCylinder.cc  DynamicVoronoiCylinder.hh  DynamicVoronoiDisk.cc  DynamicVoronoiDisk.hh  IteratedVoronoiSubtractor.hh  IteratedVoronoiSubtractorBase.cc  IteratedVoronoiSubtractorBase.hh  Makefile  OptimalTransportSubtractor.cc  OptimalTransportSubtractor.hh  Piranha.hh  PiranhaUtils.hh  PyPiranha.cc  README.md  RecursiveSafeSubtractor.cc  RecursiveSafeSubtractor.hh  clean.sh  example.cc  pileup_compare.cc  piranha.i  piranha.i.template  piranha.py  setup.cfg  setup.py
.github/workflows/: build-wheels.yml
piranha/: __init__.py  piranha.cpp  piranha.py
piranha/swig/: piranha.i
scripts/: clean.sh  prepare-cibw-linux.sh  prepare-cibw-macos.sh  prepare-piranha-docker.sh
