[metadata]

name = Piranha-FastJet-Contrib
description = FastJet Contrib for Piranha (Pileup and Infrared Radiation ANiHilAtion)

author = Patrick T. Komiske III
author_email = pkomiske@mit.edu

license = GPLv2
license_file = COPYING

long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/pkomiske/Piranha

keywords =
    grooming
    jets
    pileup
    subtraction
    safe drop

[options]

packages = find:
zip_safe = False

python_requires =
    >= 3.5

install_requires =
